# resource-registration

./: .gitignore  README.md  mkdocs.yml
.github/actions/fetch_and_run/: action.yml
.github/workflows/: common-library-ci.yml  common-library.yml
docs/: index.md  requirements.txt
docs/api-specification/: registration-api-specification.md
docs/design/: harvester-design.md  overview.md  registration-api-design.md
docs/design/common-library/: design.md
docs/design/common-library/api/: base.md  datasets.md  providers.md  reference.md  resources.md  usage.md
docs/design/harvester/: design.md
docs/design/harvester/api/: endpoint-specification.md  usage.md
docs/design/ogcapi/: design.md
docs/design/ogcapi/api/: endpoint-specification.md
docs/design/registration-api/: design.md
docs/design/registration-api/api/: usage.md
docs/getting-started/: development-guide.md  quick-start.md
docs/img/harvester-tutorial/: example-workflow.bpmn
docs/user-guide/: harvester-tutorial-intro.md  harvester-tutorial-part1.md  harvester-tutorial-part2.md  harvester-tutorial-part3.md  harvester-usage.md  index.md  registration-api-usage.md
lib/: pyproject.toml  setup.cfg
lib/lib/base/: download.py  file.py  geometry.py  geoparquet.py  inventory.py  order.py
lib/lib/datasets/: landsat.py  modis.preview.py  modis.py  sentinel.py  viirs.py
lib/lib/datasets/collections/dem/: cop-dem-glo-30.json  cop-dem-glo-90.json
lib/lib/datasets/collections/landsat/: landsat-etm-c2-l2.json  landsat-ot-c2-l2.json  landsat-tm-c2-l2.json
lib/lib/datasets/collections/modis/: modis-09ga-061.json  modis-09gq-061.json  modis-10a1-061.json  modis-13a2-061.json  modis-13a3-061.json  modis-13q1-061.json
lib/lib/datasets/collections/modis/templates/: modis.09ga.json  modis.10a1.json  modis.13a2.json  modis.13a3.json  modis.13q1.json
lib/lib/datasets/collections/sentinel/: sentinel-1-grd.json  sentinel-1-nrb.json  sentinel-1-slc.json  sentinel-2-c0-l1c.json  sentinel-2-c0-l2a.json  sentinel-2-c1-l1c.json  sentinel-2-c1-l2a.json  sentinel-3-olci-l1-efr.json  sentinel-5p-no2-l2.json
lib/lib/datasets/collections/viirs/: viirs-09ga-001.json  viirs-13a1-001.json  viirs-15a2h-001.json
lib/lib/datasets/templates/: modis.09ga.json  modis.09gq.json  modis.10a1.json  modis.13a2.json  modis.13a3.json  modis.13q1.json
lib/lib/providers/: esa_cdse.py  nasa_cmr.py  nasa_daac.py  usgs_m2m.py
lib/lib/resources/: pgstac.py  stac.py  stac_geoparquet.py
lib/test/base/: test_download.py  test_file.py
