[metadata]
name = lib 
version = 0.0
description = PROVIDE DESCRIPTION HERE
long_description = file: README.md
long_description_content_type = text/markdown
author = DLR
author_email = lib@dlr.de
url = https://github.com/EOEPCA/resource-registration/tree/main/lib/lib

[options]
packages = find_namespace:
install_requires =
    pystac
    pystac_client
    rio-cogeo
    requests
    psycopg2-binary
    pika

[options.extras_require]
stactools_sentinel = stactools-sentinel2; stactools-sentinel1

[tool:pytest]
pythonpath = .
minversion = 6.0
addopts = -q --import-mode=importlib --no-header -rfE --disable-warnings --log-level=INFO
testpaths =
    test
log_cli = True
